Fixed contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,14 @@ div{
 }
 
 .green{
-    background-color: #00D800;
+    background-color: #00EB00;
     text-align: left;
     margin-right: 50px;
     border-right: 5px solid;
     border-top: 2px solid;
+    p{
+        color: #707070;
+    }
 }
 
 footer{
